--- a/cookpal.html
+++ b/cookpal.html
@@ -316,7 +316,7 @@
 		<!--Design Process-->
 			<div class="fh5co-project-section">
 				<div class="container" id="fh5co-project">
-					<div class="row"style="margin-bottom:50px;">
+					<div class="row"style="margin-bottom:0px;">
 						<div class="col-md-10 col-md-offset-1 col-sm-offset-1">
 								<h5>Ideation</h5>
 								<h2>Brainstorming solutions</h2>
@@ -384,11 +384,37 @@
 					</div>
 				</div>
 			</div>
+			
+		</div>
+		<div class="container" >
+		
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1">
 					<div>
-						<br>
-						<p>Thank you for making this far. Here is a gif for you</p>
+						<h6>Thank you for making this far. Here is a <a style="text-decoration: underline;"href="cookpal/cat_1.gif" >gif</a> for you.</h6>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- next-prev -->
+
+		<div class="container" id="fh5co-project">
+			<div class="row">
+				<div class="col-md-3 col-md-offset-1 col-sm-offset-1 col-sm-5 col-xs-6">
+					<div>
+						<a href="google.html">
+							<h5>Previous</h5>
+							<h3>Academic Innovation Internship</h3>
+						</a>
+					</div>
+				</div>
+
+				<div class="col-md-3 col-md-offset-4 col-sm-5 col-xs-6" style="text-align: right">
+					<div>
+						<a href="http://tingweiwu.com/detroit-zoo.html">
+							<h5>Next</h5>
+							<h3>Mission Coupler</h3>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -397,18 +423,14 @@
 		
 		<!-- END fh5co-project-section -->
 
-			<footer>
+		<footer>
 			<div id="footer">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="fh5co-social-icons">
-                                <a href="mailto:tifwu@umich.edu" target="_blank"><i class="fas fa-envelope"></i></a>
-								<a href="https://www.linkedin.com/in/ting-weiwu" target="_blank"><i class="fab fa-linkedin"></i></a>
-								<a href="https://dribbble.com/TiffanyWu" target="_blank"><i class="fab fa-dribbble"></i></a>
-								<a href="https://medium.com/@tiffanywu828" target="_blank"><i class="fab fa-medium-m"></i></a>
-							</p>
-							<p>Copyright 2018 Yankun Wang. All Rights Reserved.</p>
+							<br>
+							
+							<p>Copyright 2019 Yankun Wang. All Rights Reserved.</p>
 						</div>
 					</div>
 					
