--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					</div>
                     
                     <div class="col-md-6 col-sm-6">
-						<div class="fh5co-grid animate-box fadeInUp animated" style="background-image: url(img/cover_1.jpg);">
+						<div class="fh5co-grid animate-box fadeInUp animated" style="background-image: url(intern_files/test.svg);">
 							<a class="image-popup text-center" href="ai_intern.html">
 								<div class="prod-title">
 									<h3>Center of Academic Innovation</h3>
@@ -156,7 +156,7 @@
 					</div>
                     
                     <div class="col-md-6 col-sm-6">
-						<div class="fh5co-grid animate-box fadeInUp animated" style="background-image: url(cover_1.jpg);">
+						<div class="fh5co-grid animate-box fadeInUp animated" style="background-image: url(img/cover_1.jpg);">
 							<a class="image-popup text-center" href="assistant.html">
 								<div class="prod-title">
 									<h3>Google Assistant User Research</h3>
